# convert-csv-interpreter

./: .env.sample  README.md  pyproject.toml
convert_csv_interpreter/: main.py
