[tool.poetry]
name = "convert-csv-interpreter"
version = "0.1.0"
description = ""
authors = ["FooQoo <horseshoes.buzz.17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
open-interpreter = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
