[tool.poetry]
name = "convert-csv-interpreter"
version = "0.1.0"
description = ""
authors = ["FooQoo <horseshoes.buzz.17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
open-interpreter = "0.1.17"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
